# 42Barcelona_ciber_python

./: README.md
python_0/ex00/: answers.txt  requirements.txt
python_0/ex01/: exec.py
python_0/ex02/: whois.py
python_0/ex03/: count.py
python_0/ex04/: operations.py
python_0/ex05/: kata00.py  kata01.py  kata02.py  kata03.py  kata04.py
python_0/ex06/: recipe.py
python_0/ex07/: filterwords.py
python_0/ex08/: sos.py
python_0/ex09/: guess.py
python_0/ex10/: loading.py
python_1/ex00/: README.md  book.py  l.py  recipe.py  test.py
python_1/ex01/: README.md  game.py
python_1/ex02/: README.md  sample.py  vector.py
python_1/ex03/: README.md  generator.py
python_1/ex04/: README.md  eval.py
python_1/ex05/: README.md  banking_test3.py  evaluation_test.py  test_bank.py  the_bank.py
python_2/ex00/: README.md  ft_filter.py  ft_map.py  ft_reduce.py  test.py
python_2/ex01/: README.md  main.py
python_2/ex02/: README.md  logger.py
python_2/ex03/: bad.csv  csvreader.py
python_2/ex04/: README.md
python_2/ex04/42bcn_lmcd_minipack/: pyproject.toml
python_2/ex04/42bcn_lmcd_minipack/tests/: logger.py  test_loading.py
python_2/ex04/bcnlmcdminipack/: README.md  TestPyPI-Recovery-Codes.txt  build.sh  pyproject.toml  requirements.txt
python_2/ex04/bcnlmcdminipack/src/bcnlmcdminipack/: __init__.py  loading.py  logger.py
python_2/ex04/bcnlmcdminipack/tests/: logger.py  test_loading.py  test_logger.py
python_2/ex04/my_minipack/: .pyproject.toml.swp  README.md
python_2/ex05/: TinyStatistician.py  test.py
