# pyproject.toml

[build-system]
requires = ["setuptools>=66.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bcn_lmcd_minipack"
version = "0.0.1"
description = "looger and progress bar"
readme = "README.md"
authors = [{ name = "Luis Miguel Casado Díaz", email = "luismiguelcasadodiaz@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU GPLv3",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 4 - Beta",
    "Environment :: Console"
]
keywords = ["logger", "progress bar", "tool"]
dependencies = [
    "feedparser >= 5.2.0",
    "html2text",
    'tomli; python_version < "3.11"',
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/realpython/reader"

[project.scripts]
realpython = "reader.__main__:main"